argocd/apps/socat/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: socat
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - 127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: socat
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
